--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "axios": "^0.18",
+        "axios": "^0.18.1",
         "bulma": "^0.7.4",
         "cross-env": "^5.1",
         "laravel-mix": "^4.0.7",
@@ -20,6 +20,5 @@
         "vue": "^2.5.17",
         "vue-template-compiler": "^2.6.6"
     },
-    "dependencies": {
-    }
+    "dependencies": {}
 }
